cleaned up webpack configs

--- a/client/app/common/navbar/navbar.css
+++ b/client/app/common/navbar/navbar.css
@@ -2,7 +2,7 @@
 
 .navbar {
   height: 65px;
-  background-color: #0277BD; /* primaryColor */
+  background-color: #ffd3de; /* primaryColor */
   padding: 10px;
 }
 .navbar .nav-links,
