adds image loading

--- a/client/app/components/about/about.html
+++ b/client/app/components/about/about.html
@@ -1,5 +1,6 @@
 <navbar></navbar>
 <h1>{{ vm.name }}</h1>
 <section>
-  This is the about nothing page! Remove me if you don't need me please
+  <p>This is the about nothing page! Remove me if you don't need me please</p>
+  <img src="../../../static/images/baby-duck.jpg">
 </section>
