--- a/client/app/components/home/home.html
+++ b/client/app/components/home/home.html
@@ -1,10 +1,7 @@
 <!--if you'd like to have the navbar and or header on every page, move it up a level to app.html!-->
+<main-header></main-header>
 <navbar></navbar>
-<header>
-  <hero></hero>
-</header>
-<main>
-  <div>
-    <h1>You can find me in {{ vm.name }}.html. </h1>
-  </div>
-</main>
+<div class="content-container">
+  <h1>Welcome</h1>
+  <div><i>You can find me in {{ vm.name }}.html.</i></div>
+</div>
