--- a/client/app/common/navbar/navbar.css
+++ b/client/app/common/navbar/navbar.css
@@ -1,22 +1,6 @@
 @import '../common.css';
 
-.navbar {
-  height: 65px;
-  background-color: #2dffd0; /* primaryColor */
-  padding: 10px;
-}
-
-.navbar .nav-links,
-.navbar .logo {
-  display: inline-block;
-}
-
-.navbar .logo {
-  color: #F5F5F5; /* lightTextColor */
-  margin-right: 50%;
-}
-
-.navbar .nav-links span {
-  color: #F5F5F5; /* lightTextColor */
-  font-size: 1.6rem;
+.site-navbar {
+  background-color: #ecf1d1;
+  padding:10px;
 }
